--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
     <div class="container">
 
       <p class="copyright">
-        © 2022 codewithsadee. All rights reserved.
+        ©. All rights reserved.
       </p>
 
       <ul class="social-list">
