--- a/index.html
+++ b/index.html
@@ -244,8 +244,7 @@
               <div class="about-card">
 
                 <div class="card-icon">
-                  <img src="./assets/images/css-logo.png" width="52" height="52" loading="lazy"
-                    alt="web development icon">
+                  <img src="./assets/images/css-logo.png" width="52" height="52" loading="lazy" alt="web seo icon">
                 </div>
 
                 <h3 class="h4 card-title">CSS</h3>
@@ -663,7 +662,7 @@
     <div class="container">
 
       <p class="copyright">
-        ©. All rights reserved.
+        © 2022 Kumar Tanay. All rights reserved.
       </p>
 
       <ul class="social-list">
