--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
               <div class="about-card">
 
                 <div class="card-icon">
-                  <img src="./assets/images/css-logo.png" width="52" height="52" loading="lazy" alt="web seo icon">
+                  <img src="./assets/images/css_logo.png" width="52" height="52" loading="lazy"
+                    alt="web development icon">
                 </div>
 
                 <h3 class="h4 card-title">CSS</h3>
@@ -321,7 +322,7 @@
               <div class="about-card">
 
                 <div class="card-icon">
-                  <img src="./assets/images/c++ logo.png" width="52" height="52" loading="lazy" alt="web seo icon">
+                  <img src="./assets/images/c++_logo.svg" width="52" height="52" loading="lazy" alt="web seo icon">
                 </div>
 
                 <h3 class="h4 card-title"> C++ </h3>
@@ -662,7 +663,7 @@
     <div class="container">
 
       <p class="copyright">
-        © 2022 Kumar Tanay. All rights reserved.
+        ©
       </p>
 
       <ul class="social-list">
